Split EntityTransaction into read and write